ide/src/tests/ir/snapshots/ide__tests__ir__wat__test_br_table.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (param %0) (result 1) (define %0 %1 %2 %3 %4) {
BLOCK 0
BLOCK 1
BLOCK 3
%1 = %0
TABLE GOTO 2 ELSE GOTO 4
%2 = 21
KILL %2
KILL %1
RETURN %0;
GOTO 4
BLOCK 4
%3 = 20
KILL %3
RETURN %0;
GOTO 2
BLOCK 2
%4 = 22
RETURN %4;
};

