ide/src/tests/ir/snapshots/ide__tests__ir__wat__test_call_indirect.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 1) (define %0) {
BLOCK 0
%0 = 306
RETURN %0;
};
define 1 (result 1) (define %0) {
BLOCK 1
%0 = 356
RETURN %0;
};
define 2 (result 1) (define %0) {
BLOCK 2
%0 = 3890
RETURN %0;
};
define 3 (result 1) (define %0) {
BLOCK 3
%0 = 3940
RETURN %0;
};
define 4 (result 1) (define %0 %1) {
BLOCK 4
%0 = 0
%1 <- CALL INDIRECT 0 ()
RETURN %1;
};
define 5 (result 1) (define %0 %1) {
BLOCK 5
%0 = 1
%1 <- CALL INDIRECT 1 ()
RETURN %1;
};
define 6 (result 1) (define %0 %1) {
BLOCK 6
%0 = 2
%1 <- CALL INDIRECT 2 ()
RETURN %1;
};
define 7 (result 1) (define %0 %1) {
BLOCK 7
%0 = 3
%1 <- CALL INDIRECT 3 ()
RETURN %1;
};

