ide/src/tests/ir/snapshots/ide__tests__ir__wat__test_call_indirect_with_param.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (param %0) (result 1) (define %0 %1) {
BLOCK 0
%1 = %0
RETURN %1;
};
define 1 (param %0) (result 1) (define %0 %1) {
BLOCK 1
%1 = %0
RETURN %1;
};
define 2 (param %0) (result 1) (define %0 %1) {
BLOCK 2
%1 = %0
RETURN %1;
};
define 3 (param %0) (result 1) (define %0 %1) {
BLOCK 3
%1 = %0
RETURN %1;
};
define 4 (result 1) (define %0 %1 %2) {
BLOCK 4
%0 = 32
%1 = 0
%2 <- CALL INDIRECT 0 (%1)
RETURN %2;
};
define 5 (result 1) (define %0 %1 %2) {
BLOCK 5
%0 = 64
%1 = 1
%2 <- CALL INDIRECT 1 (%1)
RETURN %2;
};
define 6 (result 1) (define %0 %1 %2) {
BLOCK 6
%0 = 1.32
%1 = 2
%2 <- CALL INDIRECT 2 (%1)
RETURN %2;
};
define 7 (result 1) (define %0 %1 %2) {
BLOCK 7
%0 = 1.64
%1 = 3
%2 <- CALL INDIRECT 3 (%1)
RETURN %2;
};

