ide/src/tests/ir/snapshots/ide__tests__ir__wat__test_phi.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (param %0) (result 1) (define %0 %1 %2 %3 %4 %5 %6) {
BLOCK 0
%1 = 3
%2 = %0
IF %2 THEN GOTO 1 ELSE GOTO 2
BLOCK 1 
%3 = 1
GOTO 3
BLOCK 2
%4 = 2
GOTO 3
BLOCK 3
%5 = phi %3 %4
%6 = %5 op %2
RETURN %6;
};

