ide/src/tests/ir/snapshots/ide__tests__ir__wat__test_phi2.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (param %0) (result 1) (define %0 %1 %2 %3 %4 %5 %6 %7 %8 %9 %10) {
BLOCK 0
%1 = 4
%2 = %0
IF %2 THEN GOTO 1 ELSE GOTO 2
BLOCK 1 
%3 = 1
%4 = 1
GOTO 3
BLOCK 2
%5 = 2
%6 = 2
GOTO 3
BLOCK 3
%7 = phi %3 %5
%8 = phi %4 %6
%9 = %8 op %7
%10 = %9 op %8
RETURN %10;
};

